--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,18 +31,27 @@
 
     <application
         android:allowBackup="true"
+        android:exported="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".UserDetailsActivity"></activity>
-        <activity android:name=".NotificationActivity" />
-        <activity android:name=".TodayUser" />
-        <activity android:name=".UserDetailsDaily" />
-        <activity android:name=".AddUser" />
+        <activity android:name=".LoginActivity"
+            android:parentActivityName=".MainActivity"></activity>
+        <activity android:name=".UserDetailsActivity"
+            android:parentActivityName=".NotificationActivity"/>
+        <activity android:name=".NotificationActivity"
+            android:parentActivityName=".HomeActivity"/>
+        <activity android:name=".TodayUser"
+            android:parentActivityName=".HomeActivity"/>
+        <activity android:name=".UserDetailsDaily"
+            android:parentActivityName=".TodayUser"/>
+        <activity android:name=".AddUser"
+            android:parentActivityName=".HomeActivity"/>
         <activity android:name=".HomeActivity" />
-        <activity android:name=".MainActivity">
+        <activity android:name=".MainActivity"
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
